# fishpath

./: Cargo.toml
src/: main.rs
